# jinjalive

./: .bowerrc  .coveragerc  .gitignore  .testr.conf  LICENSE  MANIFEST.in  README.rst  bower.json  jinjalive.wsgi  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: apidoc.rst  conf.py  index.rst
jinjalive/: _options.py
jinjalive/console/: cli.py
jinjalive/jinja/: __init__.py  render.py
jinjalive/server/: __init__.py  application.py
jinjalive/server/static/css/: style.css
jinjalive/server/static/js/: app.js  controller.js
jinjalive/server/templates/: index.html
jinjalive/tests/: testJinjalive.py  testJinjaliveAPI.py  testJinjaliveClient.py  testJinjaliveRendering.py
jinjalive/tests/data/: sample_context.yaml  sample_template_missing_variables_1.tpl
tools/tests/: 00_test_all.sh  01_init_env.sh  02_test_success.sh  03a_test_missing_variables.sh  03b_test_missing_variables.sh  04a_test_context_file_not_found.sh  04b_test_template_file_not_found.sh  05a_test_context_file_parameter_missing.sh  05b_test_template_file_parameter_missing.sh  05c_test_output_file_parameter_missing.sh  README  sample_template_missing_variables_2.tpl  sample_template_success.tpl
