[metadata]
name             = jinjalive
version          = 0.1.0
summary          = JinjaLive: Jinja rendering made easy
description-file = README.rst
author           = Marlysys
author-email     = rsaikali@marlysys.com
home-page        = http://www.marlysys.com
license          = Apache


[files]
packages         = jinjalive

[global]
setup-hooks      = pbr.hooks.setup_hook

[entry_points]
console_scripts  =
    jinjalive         = jinjalive.console.cli:main
    jinjalive-server  = jinjalive.server.application:main
    
[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
